# robolliurex

debian/: changelog  control  copyright  robolliurex.pofiles  rules
lliurex-po/robolliurex/: ca@valencia.po  es.po  robolliurex.pot
src/: CMakeLists.txt  main.cpp  robocore.cpp  robolliurex.h  robomenus.cpp  robopilot.cpp  roboslot.cpp  robowidgets.cpp  rsrcmanager.cpp
